Fix preview spacing

--- a/src/components/Presets/Presets.css
+++ b/src/components/Presets/Presets.css
@@ -1,6 +1,9 @@
-.presets {
-}
+
 .presets .mdl-list__item-primary-content {
   flex-basis: 120px;
   flex-shrink: 0;
+}
+
+.mdl-card__actions {
+  width: 33% !important;
 }
